--- a/Platform/dbo/Dockerfile
+++ b/Platform/dbo/Dockerfile
@@ -6,12 +6,10 @@ WORKDIR /src/SOL.Database.Tenant
 RUN dotnet restore
 RUN dotnet build /p:NetCoreBuild=true
 
-
 FROM markhobson/sqlpackage:latest AS final
 
 WORKDIR /app
 COPY --from=build /src/SOL.Database.Tenant/bin/Debug/. .
 
-# TODO: remove the hardcoded connection string and turn it into an environment variable
-ENTRYPOINT sqlpackage /a:Publish /sf:"./SOL.Database.Tenant.dacpac" /TargetConnectionString:"Server=svc.sqldb.local;Database=CustomerDb;User Id=sa;Password=P@ssw0rd!;Persist Security Info=False;Encrypt=False"
-# ENTRYPOINT ["tail", "-f", "/dev/null"]
+# Use environment variables for the connection string
+ENTRYPOINT sqlpackage /a:Publish /sf:"./SOL.Database.Tenant.dacpac" /TargetConnectionString:"Server=${SQL_SERVER};Database=${SQL_DATABASE};User Id=${SQL_USER};Password=${SQL_PASSWORD};Encrypt=True;TrustServerCertificate=False"
