--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -1,42 +1,64 @@
 name: Database CI/CD
 
 on:
-  workflow_dispatch:  
+  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 env:
-  DOCKER_IMAGE: sol-database-tenant
-  AZURE_SQL_SERVER: ${{ secrets.AZURE_SQL_SERVER }}.database.windows.net
-  AZURE_SQL_DATABASE: ${{ secrets.AZURE_SQL_DATABASE }}
-  AZURE_SQL_ADMIN_USER: ${{ secrets.AZURE_SQL_ADMIN_USER }}
-  AZURE_SQL_ADMIN_PASSWORD: ${{ secrets.AZURE_SQL_ADMIN_PASSWORD }}
+  SOLUTION_PATH: Platform/tst/SOL.Service.PatientEncounter.Tests/SalubrityOnline.sln
+  SQL_PROJECT_PATH: Platform/dbo/SOL.Database.Tenant/SOL.Database.Tenant.sqlproj
+  DOCKERFILE_PATH: Platform/dbo/Dockerfile
+  WORKING_DIR: Platform/dbo
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Prepare build context
-        working-directory: Platform/dbo/SOL.Database.Tenant
-        run: |
-          # Ensure necessary directories are included in Docker build context
-          ln -s ../../../../LinesApp LinesApp
-          ln -s ../../../../Platform Platform
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v1.3.1
 
-      - name: Build Docker image
+      - name: Build Solution
+        working-directory: ${{ env.WORKING_DIR }}
         run: |
-          docker build -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} -f Platform/dbo/Dockerfile Platform/dbo
+          msbuild "${{ github.workspace }}/${{ env.SOLUTION_PATH }}" \
+          /p:Configuration=Release \
+          /p:TargetFrameworkVersion=v4.7.1"
 
-      - name: Deploy to Azure SQL
+      - name: Verify DACPAC Output
+        working-directory: ${{ env.WORKING_DIR }}
         run: |
-          docker run --rm \
-            -e SQL_SERVER=${{ env.AZURE_SQL_SERVER }} \
-            -e SQL_DATABASE=${{ env.AZURE_SQL_DATABASE }} \
-            -e SQL_USER=${{ secrets.AZURE_SQL_ADMIN_USER }} \
-            -e SQL_PASSWORD=${{ secrets.AZURE_SQL_ADMIN_PASSWORD }} \
-            ${{ env.DOCKER_IMAGE }}:${{ github.sha }} \
-            /opt/sqlpackage/sqlpackage \
-            /Action:Publish \
-            /SourceFile:./SOL.Database.Tenant.dacpac \
-            /TargetConnectionString:"Server=${SQL_SERVER};Database=${SQL_DATABASE};User Id=${SQL_USER};Password=${SQL_PASSWORD};Encrypt=True;TrustServerCertificate=False"
+          ls -R "${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/"
+
+      - name: Upload DACPAC Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: database-package
+          path: ${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/SOL.Database.Tenant.dacpac
+
+  deploy:
+    needs: build
+    runs-on: self-hosted
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: database-package
+          path: ${{ github.workspace }}
+
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy Database
+        uses: Azure/sql-action@v2
+        with:
+          connection-string: ${{ secrets.CONNECTION_STRING }}
+          path: ${{ github.workspace }}/SOL.Database.Tenant.dacpac
+          action: publish
+          arguments: '/p:DropObjectsNotInSource=true /p:BlockOnPossibleDataLoss=true'
