removed the terminator

--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -25,10 +25,9 @@ jobs:
       - name: Build Solution
         working-directory: ${{ env.WORKING_DIR }}
         run: |
-          $solutionPath = "${{ github.workspace }}/${{ env.SOLUTION_PATH }}"
-          msbuild $solutionPath `
-            /p:Configuration=Release `
-            /p:TargetFrameworkVersion=v4.7.1;"
+          msbuild "${{ github.workspace }}/${{ env.SOLUTION_PATH }}" ^
+          /p:Configuration=Release ^
+          /p:TargetFrameworkVersion=v4.7.1"
 
       - name: Verify DACPAC Output
         working-directory: ${{ env.WORKING_DIR }}
