--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           msbuild "${{ github.workspace }}/${{ env.SOLUTION_PATH }}" ^
           /p:Configuration=Release ^
-          /p:TargetFrameworkVersion=v4.7.1"
+          /p:TargetFrameworkVersion=v4.7.1
 
       - name: Verify DACPAC Output
         working-directory: ${{ env.WORKING_DIR }}
