removed cmd shell

--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -24,10 +24,9 @@ jobs:
 
       - name: Build Solution
         working-directory: ${{ env.WORKING_DIR }}
-        shell: cmd
         run: |
-          msbuild "${{ github.workspace }}/${{ env.SOLUTION_PATH }}" ^
-          /p:Configuration=Release ^
+          msbuild "${{ github.workspace }}/${{ env.SOLUTION_PATH }}" \
+          /p:Configuration=Release \
           /p:TargetFrameworkVersion=v4.7.1
 
       - name: Verify DACPAC Output
