--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -23,16 +23,14 @@ jobs:
         uses: microsoft/setup-msbuild@v1.3.1
 
       - name: Build Solution
-        working-directory: ${{ env.WORKING_DIR }}
+        working-directory: ${{ github.workspace }}
         run: |
-          msbuild "${{ github.workspace }}/${{ env.SOLUTION_PATH }}" \
-          /p:Configuration=Release \
-          /p:TargetFrameworkVersion=v4.7.1
+          msbuild "${{ env.SOLUTION_PATH }}" /p:Configuration=Release /p:TargetFrameworkVersion=v4.7.1
 
       - name: Verify DACPAC Output
         working-directory: ${{ env.WORKING_DIR }}
         run: |
-          ls -R "${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/"
+          Get-ChildItem -Recurse "${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/"
 
       - name: Upload DACPAC Artifact
         uses: actions/upload-artifact@v4
