--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.3.1
 
+      - name: Restore NuGet Packages
+        working-directory: ${{ github.workspace }}
+        run: |
+          nuget restore "${{ env.SOLUTION_PATH }}"
+
       - name: Build Solution
         working-directory: ${{ github.workspace }}
         run: |
