--- a/.github/workflows/platform-cicd.yml
+++ b/.github/workflows/platform-cicd.yml
@@ -15,34 +15,34 @@ env:
   IMAGE_NAME: platform-service
 
 jobs:
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Code
-  #       uses: actions/checkout@v4
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-  #     - name: Set up .NET
-  #       uses: actions/setup-dotnet@v3
-  #       with:
-  #         dotnet-version: ${{ env.DOTNET_VERSION }}
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-  #     - name: Restore Dependencies
-  #       working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
-  #       run: dotnet restore
+      # - name: Restore Dependencies
+      #   working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
+      #   run: dotnet restore
 
-  #     - name: Build
-  #       working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
-  #       run: dotnet build --configuration Release --no-restore
+      # - name: Build
+      #   working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
+      #   run: dotnet build --configuration Release --no-restore
 
-  #     - name: Publish
-  #       working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
-  #       run: dotnet publish -c Release -o ./publish
+      # - name: Publish
+      #   working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
+      #   run: dotnet publish -c Release -o ./publish
 
-  #     - name: Upload Build Artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: platform-service-artifact
-  #         path: ${{ env.PLATFORM_PROJECT_PATH }}/publish
+      # - name: Upload Build Artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: platform-service-artifact
+      #     path: ${{ env.PLATFORM_PROJECT_PATH }}/publish
 
   docker-build-and-push:
     needs: build
