--- a/.github/workflows/platform-cicd.yml
+++ b/.github/workflows/platform-cicd.yml
@@ -8,9 +8,9 @@ on:
 
 env:
   DOTNET_VERSION: '6.0.x'  
-  SOLUTION_PATH: Platform/tst/SOL.Service.PatientEncounter.Tests/SalubrityOnline.sln
-  PLATFORM_PROJECT_PATH: Platform/src
+  PROJECT_PATH: Platform/src/SOL.Gateway/SOL.Gateway.csproj
   DOCKERFILE_PATH: Platform/src/Dockerfile
+  BUILD_OUTPUT_PATH: Platform/src/SOL.Gateway/publish
   AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
   IMAGE_NAME: platform-service
 
@@ -27,26 +27,23 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Restore Dependencies
-        working-directory: ${{ github.workspace }}
-        run: dotnet restore ${{ env.SOLUTION_PATH }}
+        run: dotnet restore ${{ env.PROJECT_PATH }}
 
       - name: Build
-        working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
-        run: dotnet build --configuration Release --no-restore
+        run: dotnet build ${{ env.PROJECT_PATH }} --configuration Release --no-restore
 
       - name: Publish
-        working-directory: ${{ env.PLATFORM_PROJECT_PATH }}
-        run: dotnet publish -c Release -o ./publish
+        run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o ${{ env.BUILD_OUTPUT_PATH }}
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: platform-service-artifact
-          path: ${{ env.PLATFORM_PROJECT_PATH }}/publish
+          path: ${{ env.BUILD_OUTPUT_PATH }}
 
   docker-build-and-push:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
