--- a/.github/workflows/platform-cicd.yml
+++ b/.github/workflows/platform-cicd.yml
@@ -43,33 +43,10 @@ jobs:
 
   docker-build-and-push:
     needs: build
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
-      - name: Install Chocolatey (if not already installed)
-        shell: powershell
-        run: |
-          Set-ExecutionPolicy Bypass -Scope Process -Force
-          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072
-          iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
-      
-      - name: Install Docker Desktop
-        shell: powershell
-        run: |
-          choco install docker-desktop -y --force
-          
-      - name: Start Docker Service
-        shell: powershell
-        run: |
-          Start-Service Docker
-          Set-Service -Name Docker -StartupType Automatic
-
-      - name: Verify Docker Installation
-        shell: powershell
-        run: |
-          docker --version
 
       - name: Log in to Azure Container Registry
         run: |
