--- a/.github/workflows/reporting-cicd.yml
+++ b/.github/workflows/reporting-cicd.yml
@@ -55,7 +55,7 @@ jobs:
           docker tag ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
 
       - name: Log in to ACR
-        run: echo $REGISTRY_PASSWORD | docker login $ACR_NAME.azurecr.io -u $REGISTRY_USERNAME --password-stdin
+        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login ${{ env.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
 
       - name: Push Docker image (SHA tag)
         run: docker push ${{ env.AZURE_CONTAINER_REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
