--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -1,67 +1,127 @@
+# name: Database CI/CD
+
+# on:
+#   workflow_dispatch:
+#   pull_request:
+#     branches:
+#       - main
+
+# env:
+#   SQL_PROJECT_PATH: Platform/dbo/SOL.Database.Tenant/SOL.Database.Tenant.sqlproj
+#   DOCKERFILE_PATH: Platform/dbo/Dockerfile
+#   WORKING_DIR: Platform/dbo
+
+# jobs:
+#   build:
+#     runs-on: windows-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Setup MSBuild
+#         uses: microsoft/setup-msbuild@v1.3.1
+
+#       - name: Build Solution
+#         working-directory: ${{ github.workspace }}
+#         run: |
+#           msbuild "${{ env.SOLUTION_PATH }}" /p:Configuration=Release /p:TargetFrameworkVersion=v4.7.1
+
+#       - name: Verify DACPAC Output
+#         working-directory: ${{ env.WORKING_DIR }}
+#         run: |
+#           Get-ChildItem -Recurse "${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/"
+
+#       - name: Upload DACPAC Artifact
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: database-package
+#           path: ${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/SOL.Database.Tenant.dacpac
+
+#   deploy:
+#     needs: build
+#     runs-on: self-hosted
+#     steps:
+#       - name: Download Artifact
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: database-package
+#           path: ${{ github.workspace }}
+
+#       - name: Azure Login
+#         uses: azure/login@v1
+#         with:
+#           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+#       - name: Deploy Database
+#         uses: Azure/sql-action@v2
+#         with:
+#           connection-string: ${{ secrets.CONNECTION_STRING }}
+#           path: ${{ github.workspace }}/SOL.Database.Tenant.dacpac
+#           action: publish
+#           arguments: '/p:DropObjectsNotInSource=true /p:BlockOnPossibleDataLoss=true'
 name: Database CI/CD
 
 on:
-  workflow_dispatch:
   pull_request:
     branches:
       - main
-
-env:
-  SOLUTION_PATH: Platform/SalubrityOnline.sln
-  SQL_PROJECT_PATH: Platform/dbo/SOL.Database.Tenant/SOL.Database.Tenant.sqlproj
-  DOCKERFILE_PATH: Platform/dbo/Dockerfile
-  WORKING_DIR: Platform/dbo
+  workflow_dispatch:
 
 jobs:
-  build:
+  build-db:
     runs-on: windows-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.3.1
-
-      - name: Restore NuGet Packages
-        working-directory: ${{ github.workspace }}
+      - name: Build Database Project
         run: |
-          nuget restore "${{ env.SOLUTION_PATH }}"
+          msbuild Platform/dbo/SOL.Database.Tenant/SOL.Database.Tenant.sqlproj /p:Configuration=Debug
+        shell: powershell
 
-      - name: Build Solution
-        working-directory: ${{ github.workspace }}
+      - name: Copy DACPAC to Staging Directory
         run: |
-          msbuild "${{ env.SOLUTION_PATH }}" /p:Configuration=Release /p:TargetFrameworkVersion=v4.7.1
-
-      - name: Verify DACPAC Output
-        working-directory: ${{ env.WORKING_DIR }}
-        run: |
-          Get-ChildItem -Recurse "${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/"
+          New-Item -ItemType Directory -Path staging -Force
+          Copy-Item -Path Platform/dbo/SOL.Database.Tenant/bin/Debug/*.dacpac -Destination staging
+        shell: powershell
 
       - name: Upload DACPAC Artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: database-package
-          path: ${{ github.workspace }}/Platform/dbo/SOL.Database.Tenant/bin/Release/SOL.Database.Tenant.dacpac
+          name: dropDacpac
+          path: staging
 
-  deploy:
-    needs: build
+  deploy-db:
     runs-on: self-hosted
+    needs: build-db
+    environment: dbaverificationscript
     steps:
-      - name: Download Artifact
-        uses: actions/download-artifact@v4
+      - name: Download DACPAC Artifact
+        uses: actions/download-artifact@v3
         with:
-          name: database-package
-          path: ${{ github.workspace }}
+          name: dropDacpac
+          path: staging
 
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy Database
-        uses: Azure/sql-action@v2
-        with:
-          connection-string: ${{ secrets.CONNECTION_STRING }}
-          path: ${{ github.workspace }}/SOL.Database.Tenant.dacpac
-          action: publish
-          arguments: '/p:DropObjectsNotInSource=true /p:BlockOnPossibleDataLoss=true'
+      - name: Generate Schema Change Script
+        run: |
+          # Locate the generated DACPAC file.
+          $dacpac = Get-ChildItem -Path staging -Filter *.dacpac | Select-Object -First 1
+          if (-not $dacpac) {
+            Write-Error "No DACPAC file found in staging folder"
+            exit 1
+          }
+          $outputScript = "schemaChangeScript.sql"
+          
+          # Use SqlPackage.exe to generate the SQL update script.
+          & "C:\Program Files (x86)\Microsoft SQL Server\150\DAC\bin\SqlPackage.exe" `
+            /Action:Script `
+            /SourceFile:"$($dacpac.FullName)" `
+            /TargetServerName:"${{ secrets.AZURE_SQL_SERVER }}.database.windows.net" `
+            /TargetDatabaseName:"${{ secrets.AZURE_SQL_DATABASE }}" `
+            /TargetUser:"${{ secrets.AZURE_SQL_ADMIN_USER }}" `
+            /TargetPassword:"${{ secrets.AZURE_SQL_ADMIN_PASSWORD }}" `
+            /OutputPath:$outputScript
+          
+          Write-Host "Auto Generated SQL Update Script:"
+          Get-Content $outputScript
+        shell: powershell
