--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -77,22 +77,9 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.1
 
-      - name: Install .NET Framework 4.0 Targeting Pack (if missing)
-        shell: powershell
+      - name: Build Database Project
         run: |
-          $targetingPackPath = "C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0"
-          if (!(Test-Path $targetingPackPath)) {
-            Write-Host "❌ .NET Framework 4.0 Targeting Pack not found. Installing..."
-            Invoke-WebRequest -Uri "https://download.microsoft.com/download/B/4/3/B43777DC-342A-4CC2-8F5C-66C2B04630E6/dotNetFx40_Full_setup.exe" -OutFile "$env:TEMP\dotNetFx40.exe"
-            Start-Process -FilePath "$env:TEMP\dotNetFx40.exe" -ArgumentList "/q" -Wait
-            Write-Host "✅ .NET Framework 4.0 Targeting Pack installed!"
-          } else {
-            Write-Host "✅ .NET Framework 4.0 Targeting Pack is already installed!"
-          }
-
-      - name: Build Database Project (Force .NET 4.0 Reference Assemblies)
-        run: |
-          msbuild Platform/dbo/SOL.Database.Tenant/SOL.Database.Tenant.sqlproj /p:Configuration=Debug /p:TargetFrameworkRootPath="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework"
+          msbuild Platform/dbo/SOL.Database.Tenant/SOL.Database.Tenant.sqlproj /p:Configuration=Debug /p:TargetFrameworkVersion=v4.7.1
         shell: powershell
 
       - name: Copy DACPAC to Staging Directory
