--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install Dependencies
         working-directory: ${{ env.FRONTEND_PATH }}
-        run: npm ci
+        run: npm install
 
       - name: Build Vue App
         working-directory: ${{ env.FRONTEND_PATH }}
