added frontend graphQL

--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -34,7 +34,8 @@ jobs:
 
       - name: Generate GraphQL Types
         working-directory: ${{ env.FRONTEND_PATH }}
-        run: npm run generate
+        run: |
+          npx graphql-codegen --config codegen.ts || echo "Skipping GraphQL code generation"
 
       - name: Build Vue App
         working-directory: ${{ env.FRONTEND_PATH }}
