--- a/.github/workflows/frontend-cicd.yml
+++ b/.github/workflows/frontend-cicd.yml
@@ -46,7 +46,7 @@ jobs:
 
   build-and-push-docker:
     runs-on: ubuntu-latest
-    needs: build-frontend
+    # needs: build-frontend
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
