changed sql action version

--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -50,9 +50,9 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy Database
-        uses: Azure/sql-action@v2
+        uses: Azure/sql-action@v2.3
         with:
           connection-string: ${{ secrets.SQL_CONNECTION_STRING }}
-          path: staging/SOL.Database.Tenant.dacpac
-          action: publish
+          path: 'staging/SOL.Database.Tenant.dacpac'
+          action: 'publish'
           arguments: '/p:DropObjectsNotInSource=true /p:BlockOnPossibleDataLoss=true'
