--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -38,6 +38,14 @@ jobs:
     needs: build-db
     environment: dbaverificationscript
     steps:
+      - name: Install SqlPackage (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          Invoke-WebRequest -Uri "https://aka.ms/sqlpackage-windows" -OutFile sqlpackage.zip
+          Expand-Archive -Path sqlpackage.zip -DestinationPath "C:\SqlPackage"
+          echo "C:\SqlPackage" | Out-File -Append -Encoding utf8 $env:GITHUB_PATH
+        shell: powershell
+        
       - name: Download DACPAC Artifact
         uses: actions/download-artifact@v4
         with:
