changed sql exe download task

--- a/.github/workflows/db-cicd.yml
+++ b/.github/workflows/db-cicd.yml
@@ -49,6 +49,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Debug SqlPackage Path
+        run: |
+          echo "SqlPackage location:"
+          where SqlPackage  
+
       - name: Add SqlPackage to PATH
         run: echo "C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\170\Tools\Binn\" >> $GITHUB_PATH
 
